# aa

./: CMakeLists.txt  README.md  setup.py
src/: Board.cpp  Board.h  Dice.cpp  Dice.h  main.cpp
src/battlesim/: Battlesim.cpp  Battlesim.h
src/game/: Game.cpp  Game.h
src/util/: matrix.cpp  matrix.h  pybind_matrix.h
